make heap size auto adjust to machine type